# control-toolbox

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENCE.txt  NOTICE.txt  README.md  bitbucket-pipelines.yml
ct/: CMakeLists.txt  build_ct.sh  build_doc.sh  clean_ct.sh  install_cmake.sh  install_cppadcg.sh  install_deps.sh  install_hpipm.sh  package.xml  run_tests.py  run_unit_tests.sh  uninstall_ct.sh
ct/cmake/: clang-cxx-dev-tools.cmake  compilerSettings.cmake  ct-cmake-helpers.cmake  explicitTemplateHelpers.cmake
ct/config/: explicit_templates.cfg
ct_core/: CMakeLists.txt  Doxyfile  ct_coreConfig.cmake.in  package.xml
ct_core/cmake/: FindClang.cmake  FindCppAD.cmake  FindCppADCG.cmake  Findclang.cmake  Findllvm.cmake  ct_coreConfig.cmake  ct_coreConfig.cmake.in
ct_core/doc/: CMakeLists.txt  DoxygenLayout.xml  ct_core.doxyfile  mainpage.dox  tutorial.dox
ct_core/examples/: CMakeLists.txt  CustomController.h  DampedOscillator.cpp  DampedOscillatorCustomController.cpp  Masspoint.h  MasspointIntegration.cpp
ct_core/examples/src/: DampedOscillator.cpp  DampedOscillatorCustomController.cpp  MasspointIntegration.cpp
ct_core/prespec/: core_explicit_templates.cfg  prespecTest1Double.cpp  prespecTest2Double.cpp  prespec_12_4_double.cpp  prespec_12_6_double.cpp  prespec_2_1_double.cpp
ct_core/prespec/control/: ConstantController.cpp.in  StateFeedbackController.cpp.in
ct_core/prespec/integration/: Integrator-Symplectic.cpp.in  Integrator.cpp.in  Observer.cpp.in
ct_core/templates/: DiscreteLinearSystem.tpl.cpp  DiscreteLinearSystem.tpl.h  DiscreteLinearSystem.tplA.cpp  DiscreteLinearSystem.tplB.cpp  ForwardZero.tpl.cpp  ForwardZero.tpl.h  Hessian.tpl.cpp  Hessian.tpl.h  Jacobian.tpl.cpp  Jacobian.tpl.h  LinearSystem.tpl.cpp  LinearSystem.tpl.h
ct_core/test/: ADPthreadTest.cpp  AutoDiffIntegrator.cpp  AutoDiffLinearizerTest.cpp  CMakeLists.txt  CodegenTests.cpp  DiscreteArrayTest.cpp  DiscreteTrajectoryTest.cpp  GTestCMakeLists.txt.in  IntegrationTest.cpp  IntegratorComparison.cpp  InterpolationTest.cpp  LinspaceTest.cpp  NoiseTest.cpp  SecondOrderSystemTest.cpp  SensitivityIntegratorTest.cpp  StateManifoldTest.cpp  SwitchedControlledSystemTest.cpp  SwitchedDiscreteControlledSystemTest.cpp  SwitchingTest.cpp  TrajectoryTest.cpp  run_tests.py  traitTest.cpp
ct_core/test/integration/: IntegrationTest.cpp  IntegrationTest.h  IntegrationTestPrespec.cpp  IntegratorComparison.cpp  IntegratorComparison.h  IntegratorComparisonPrespec.cpp  ManifoldIntegrationTest.h  SensitivityTest.cpp  SymplecticIntegrationTest.cpp  SystemDiscretizerTest.cpp  SystemDiscretizerTest.h
ct_core/test/internal/: MatrixInversionTest.cpp
ct_core/test/math/: JacobianCGTest.h  MatrixInversionTest.cpp
ct_core/test/plot/: plotQwtTest.cpp  plotTest.cpp
ct_core/test/switching/: SwitchedControlledSystemTest.cpp  SwitchedDiscreteControlledSystemTest.cpp  SwitchingTest.cpp
ct_core/test/system/: ADCodegenLinearizerTest.h  AutoDiffLinearizerTest.cpp  ControlledSystemTest.cpp  DiscreteSystemLinearizerADCGTest.h  LTISystemTest.cpp  LinearTestSystems.h  ManifoldSystem_test.cpp  SystemLinearizerNumDiffTest.cpp  SystemLinearizerTest.cpp  TestDiscreteNonlinearSystem.h  TestNonlinearSystem.h  TestNonlinearSystemDynamic.cpp  TestNonlinearSystemDynamic.h  TestNonlinearSystemDynamic_test.cpp  TestSymplecticSystem.h  TestSystemDynamic.cpp  TestSystemDynamic.h  TestSystemFixed.h  TestSystemSE2.h
ct_doc/: CMakeLists.txt  Doxyfile  package.xml  publish_doc.sh
ct_doc/doc/: DoxygenLayout.xml  application_examples.dox  changelog.dox  core_tutorial.dox  ct_doc.doxyfile  developer_info.dox  getting_started.dox  ik_tutorial.dox  installation.dox  mainpage.dox  optcon_tutorial.dox  performance.dox  rbd_tutorial.dox  refs.bib  tutorial.dox
ct_doc/doc/html/: ct_doc_placeholder.txt
ct_ik/: CMakeLists.txt  package.xml
ct_ik/include/ct_ik/: HyAInverseKinematics.h  Irb4600InverseKinematics.h
ct_ik/src/HyA/: transform6d.cpp
ct_ik/test/: HyAIKTest.cpp  IKTest.cpp
ct_models/: CMakeLists.txt  Doxyfile  package.xml
ct_models/cmake/: ct_modelsConfig.cmake  ct_modelsConfig.cmake.in
ct_models/doc/: CMakeLists.txt  DoxygenLayout.xml  ct_models.doxyfile  mainpage.dox
ct_models/examples/: CMakeLists.txt  exampleDir.h.in
ct_models/examples/InvertedPendulum/: NLOC_MPC.cpp  cost.info  solver.info
ct_models/scripts/: hyqRunAllCodgenTimings.sh
ct_models/src/HyA/: transform6d.cpp
ct_models/src/Irb4600/: transform6d.cpp
ct_models/src/Quadrotor/: A_quadrotor.cpp  (+3 more)
ct_models/test/: CMakeLists.txt
ct_optcon/: CMakeLists.txt  Doxyfile  package.xml
ct_optcon/cmake/: FindIPOPT.cmake  Findblasfeo.cmake  Findhpipm.cmake  ct_optconConfig.cmake  ct_optconConfig.cmake.in  externalSolvers.cmake
ct_optcon/config/: example.info
ct_optcon/doc/: CMakeLists.txt  ct_optcon.doxyfile  mainpage.dox  tutorial.dox
ct_optcon/examples/: CMakeLists.txt  ConstraintExampleOutput.cpp  DMS.cpp  KalmanDisturbanceFiltering.cpp  KalmanFiltering.cpp  LQR.cpp  NLOC.cpp  NLOC_MPC.cpp  NLOC_boxConstrained.cpp  NLOC_generalConstrained.cpp  Nlp.cpp  SimpleNlp.cpp  dmsCost.info  exampleDir.h.in  iLQG_MPC.cpp  iLQR_MPC.cpp  kalmanDisturbanceFilterSettings.info  kalmanFilterWeights.info  lqrCost.info  nlocCost.info  nlocCost_ObstacleConstraint.info  nlocSolver.info  nlocSolver_ObstacleConstraint.info  plotResultsOscillator.h  plotResultsPointMass.h
ct_optcon/msg/: Control.msg  iLQG.msg
ct_optcon/prespec/: prespecTest1Double.cpp  prespecTest3Double.cpp  prespec_12_6_double.cpp  prespec_2_1_double.cpp
ct_optcon/src/: ct_optcon.cpp
ct_optcon/test/: CMakeLists.txt
ct_rbd/: CMakeLists.txt  Doxyfile  package.xml
ct_rbd/cmake/: ct_rbdConfig.cmake  ct_rbdConfig.cmake.in
ct_rbd/doc/: CMakeLists.txt  ct_rbd.doxyfile  mainpage.dox
ct_rbd/prespec/: prespec_12_6_double.cpp
ct_rbd/src/: SimpleArmTrajectoryGeneratorTest.cpp  SingleDOFTrajectoryGenerator.cpp  ct_rbd.cpp  kindrEulerInverseRotateTest.cpp  plotResultsTrajectories.h
ct_rbd/test/: CMakeLists.txt  ctRbdTestDir.h.in
examples/: CMakeLists.txt
(+1141 files in other folders)
