<package>
  <name>ct</name>
  <version>0.3.0</version>
  <description>
    ADRL Control Toolbox v3.0
  </description>
  <maintainer email="markusgft@gmail.com">Markus Giftthaler</maintainer>  
  <license>BSD-2</license>

  <buildtool_depend>catkin</buildtool_depend>
  
   <export>
   	  <metapackage />
   </export>
</package>