<package>
  <name>ct</name>
  <version>3.0.1</version>
  <description>
    ADRL Control Toolbox 3.0.1
  </description>
  <maintainer email="markusgft@gmail.com">Markus Giftthaler</maintainer>  
  <license>BSD-2</license>

  <buildtool_depend>catkin</buildtool_depend>
  
   <export>
   	  <metapackage />
   </export>
</package>