<package format="2">
  <name>ct_core</name>
  <version>0.3.0</version>
  <description>
    Control toolbox - core module.
  </description>
  <maintainer email="markusgft@gmail.com">Markus Giftthaler</maintainer>
  <maintainer email="neunertm@gmail.com">Michael Neunert</maintainer>
  <license>BSD-2</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
