<package>
  <name>ct_doc</name>
  <version>1.0.0</version>
  <description>
  ADRL control toolbox - Documentation
  </description>
  <maintainer email="neunertm@ethz.ch">Michael Neunert</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>ct_core</build_depend>
  <build_depend>ct_optcon</build_depend>
  <build_depend>ct_rbd</build_depend>
  <build_depend>ct_models</build_depend>
  
  <run_depend>ct_core</run_depend>
  <run_depend>ct_optcon</run_depend>
  <run_depend>ct_rbd</run_depend>
  <run_depend>ct_models</run_depend>
  
</package>
