<package>
  <name>ct_doc</name>
  <version>0.2.1</version>
  <description>
  ADRL control toolbox - Documentation
  </description>
  
  <maintainer email="neunertm@gmail.com">Michael Neunert</maintainer>
  <maintainer email="mgiftthaler@ethz.ch">Markus Giftthaler</maintainer>
  
  <license>Apache v2</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>ct_core</build_depend>
  <build_depend>ct_optcon</build_depend>
  <build_depend>ct_rbd</build_depend>
  <build_depend>ct_models</build_depend>
  
  <run_depend>ct_core</run_depend>
  <run_depend>ct_optcon</run_depend>
  <run_depend>ct_rbd</run_depend>
  <run_depend>ct_models</run_depend>
  
</package>
