<?xml version="1.0"?>
<package>
  <name>ct_ik</name>
  <version>0.2.1</version>
  <description>Inverse Kinematics solvers package of the Control Toolbox</description>
  <maintainer email="mgiftthaler@ethz.ch">Markus Giftthaler</maintainer>
  <maintainer email="neunertm@gmail.com">Michael Neunert</maintainer>

  <license>Apache v2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ct_rbd</build_depend>

  <run_depend>ct_rbd</run_depend>
</package>
